--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
+    
+<!--Header-->
+
     <head>
         <title>Excursion</title>
         <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
     </head>
+
+    <!--Body-->
+
     <body>
         <h1>Discover hidden places in the world around you</h1> 
         <a href="#"><h4>Download Excursion (Coming soon!)</h4></a> 
+        <videp autoplay muted loop src="./" alt="Excursion Video">
+        
+        <h2>Your personal trave guide</h2>
+
 
     </body>
 
